--- a/_posts/2025-03-14-Graph.md
+++ b/_posts/2025-03-14-Graph.md
@@ -7,10 +7,10 @@ tags: [Graph, DFS, BFS]
 ---
 ## 1. 그래프 표현 방법
 ### 1) 인접 리스트 (Adjacency List)
-- 공간 복잡도: $O(V+E)$
+- 공간 복잡도: \\( O(V+E) \\)
 - 구현 방식: dict + list
 - 장점: 메모리 절약, 탐색 속도 빠름 (특히 희소 그래프에서 유리)
-- 단점: 특정 간선 존재 여부 확인 시 $O(V)$ 시간 필요
+- 단점: 특정 간선 존재 여부 확인 시 \\( O(V) \\) 시간 필요
 
 ```python
 graph = {
@@ -24,9 +24,9 @@ graph = {
 ```
 
 ### 2) 인접 행렬 (Adjacency Matrix)
-- 공간 복잡도: $O(V^2)$
+- 공간 복잡도: \\( O(V^2) \\)
 - 구현 방식: 2차원 리스트 사용
-- 장점: 특정 간선 존재 여부를 $O(1)$ 에 확인 가능
+- 장점: 특정 간선 존재 여부를 \\( O(1)\\) 에 확인 가능
 - 단점: 메모리 낭비 심함 (특히 희소 그래프에서)
 
 ```python
@@ -44,7 +44,7 @@ graph = [
 ## 2. 그래프 탐색 알고리즘
 ### 1) 깊이 우선 탐색 (DFS)
 - 방식: 스택을 활용 (재귀 or 명시적 스택 사용)
-- 시간 복잡도: $O(V+E)$
+- 시간 복잡도: \\( O(V+E) \\)
 
 ```python
 def dfs(graph, node, visited):
@@ -69,7 +69,7 @@ dfs(graph, 'A', visited)
 
 ### 2) 너비 우선 탐색 (BFS)
 - 방식: 큐(Queue) 사용
-- 시간 복잡도: $O(V+E)$
+- 시간 복잡도: \\( O(V+E) \\)
 - 특징: 최단 거리 탐색에 유리
 
 ```python
@@ -103,7 +103,7 @@ bfs(graph, 'A')
 ### 1) 다익스트라 알고리즘 (Dijkstra)
 - 목적: 특정 시작 노드에서 모든 노드까지 최단 거리
 - 특징: 음수 가중치가 있는 경우 사용할 수 없음
-- 시간 복잡도: $O((V+E)logV)$ (우선순위 큐 사용 시)
+- 시간 복잡도: \\( O((V+E)logV) \\) (우선순위 큐 사용 시)
 
 ```python
 import heapq
@@ -138,7 +138,7 @@ print(dijkstra(graph, 'A'))
 
 ### 2) 플로이드-워셜 알고리즘 (Floyd-Warshall)
 - 목적: 모든 노드 간 최단 거리 계산
-- 시간 복잡도: $O(V^3)$ (모든 정점에서 모든 정점까지 탐색)
+- 시간 복잡도: \\( O(V^3) \\) (모든 정점에서 모든 정점까지 탐색)
 
 ```python
 INF = float('inf')
@@ -170,7 +170,7 @@ print(floyd_warshall(graph))
 
 ## 4. 위상 정렬 (Topological Sort)
 - 목적: 방향 그래프에서 노드 순서를 정하는 알고리즘 (DAG 전용)
-- 시간 복잡도: $O(V+E)$
+- 시간 복잡도: \\( O(V+E) \\)
 
 ```python
 from collections import deque
