docs: Update post
Signed-off-by: Patrick <84011940+roomylot60@users.noreply.github.com>

--- a/_posts/2025-06-09-dataurl.md
+++ b/_posts/2025-06-09-dataurl.md
@@ -32,3 +32,19 @@ dialect+driver://username:password@host:port/database
 |host	|DB 서버 주소 (도커라면 서비스명)	|localhost, db, db_stream 등|
 |port	|DB 접속 포트 번호	|MySQL/MariaDB: 3306, PostgreSQL: 5432|
 |database	|접속할 데이터베이스 이름	|mydb, project_db 등|
+
+- 표준화된 DB 연결 문자열 형식
+- 해당 문자열은 데이터베이스에 연결하기 위해 필요한 모든 정보를 하나의 URL로 표현한 것
+
+1. MySQL + PyMySQL (MariaDB 포함)
+```plaintext
+mysql+pymysql://root:mypass@db_stream:3306/mydatabase
+```
+2. PostgreSQL + psycopg2
+```plaintext
+postgresql+psycopg2://admin:secret@localhost:5432/mydb
+```
+3. SQLite (파일 기반 DB)
+```plaintext
+sqlite:///./test.db
+```
